src/components/Pages/photobook.scss
.photobook-container {
  min-height: 100vh;
  width: 45%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: black;
  overflow: auto;

  margin: 0 auto;
  @media (max-width: 768px) {
    width: calc(100% - 1.5rem);
    overflow-y: hidden;
    height: 100vh;
  }

  .react-player {
    // max-width: 100%;
    margin-bottom: 3rem;

    @media (max-width: 768px) {
      padding-top: 2rem;
      height: 240px;
    }
  }
  > p {
    font-size: 12px;
    width: 100%;
    text-align: center;

    @media (max-width: 768px) {
      padding-bottom: 2rem;
    }
  }
}

